--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,22 +8,23 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:roundIcon="@mipmap/ic_launcher_round">
+
         <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
 
         <!--//2++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
         <!--COMMENT OUT THIS ACTIVITY TAG FOR .AAR MODE-->
         <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
-        <activity
-            android:name=".module.MainActivity"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;END-&#45;&#45;&#45;&#45;&#45;&#45;-->
+                <activity
+                    android:name=".module.MainActivity"
+                    android:screenOrientation="portrait">
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>
+        <!--END &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;END-&#45;&#45;&#45;&#45;&#45;&#45;-->
 
         <activity
             android:name=".module.webview.InlinePaymentActivity"
@@ -32,10 +33,10 @@
     </application>
     <!--//3++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
     <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme"
-    android:roundIcon="@mipmap/ic_launcher_round"
+<!--    android:icon="@mipmap/ic_launcher"-->
+<!--    android:label="@string/app_name"-->
+<!--    android:theme="@style/AppTheme"-->
+<!--    android:roundIcon="@mipmap/ic_launcher_round"-->
     <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
 
     <uses-permission android:name="android.permission.INTERNET" />
