--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,6 @@
         <activity
             android:name=".module.webview.InlinePaymentActivity"
             android:screenOrientation="portrait" />
-        <!--        android:theme="@style/RemitaAppTheme"-->
     </application>
     <!--//3++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
     <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
@@ -37,6 +36,7 @@
     <!--    android:label="@string/app_name"-->
     <!--    android:theme="@style/AppTheme"-->
     <!--    android:roundIcon="@mipmap/ic_launcher_round"-->
+<!--    android:theme="@style/AppTheme"-->
     <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
 
     <uses-permission android:name="android.permission.INTERNET" />
